--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_TOP_SALES = 'http://localhost:7070/api/top-sales'
-VITE_ITEMS = 'http://localhost:7070/api/items'
-VITE_CATEGORIES = 'http://localhost:7070/api/categories'
+VITE_TOP_SALES = 'https://react-diploma-backend.onrender.com/api/top-sales'
+VITE_ITEMS = 'https://react-diploma-backend.onrender.com/api/items'
+VITE_CATEGORIES = 'https://react-diploma-backend.onrender.com/api/categories'
