--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
