--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
-VITE_TOP_SALES = 'https://react-diploma-backend.onrender.com/api/top-sales'
 VITE_ITEMS = 'https://react-diploma-backend.onrender.com/api/items'
 VITE_CATEGORIES = 'https://react-diploma-backend.onrender.com/api/categories'
+VITE_TOP_SALES = 'https://react-diploma-backend.onrender.com/api/top-sales'
+VITE_ITEMS = 'https://react-diploma-backend.onrender.com/api/items/'
+VITE_FILTER_BASE = 'https://react-diploma-backend.onrender.com/api/items?categoryId='
+VITE_DOWN_LOAD_MORE_BASE = 'https://react-diploma-backend.onrender.com/api/items?offset='
+VITE_DOWN_LOAD_MORE_CATEGORIES_BASE01 = 'https://react-diploma-backend.onrender.com/api/items?categoryId='
+VITE_DOWN_LOAD_MORE_CATEGORIES_BASE02 = '&offset='
+VITE_BASE = 'https://reactdiploma.summer20100.repl.co/'
+VITE_FIND_ITEMS01 = 'https://react-diploma-backend.onrender.com/api/items?q='
+VITE_FIND_ITEMS02 = '&offset='
+VITE_FIND_ITEMS03 = '&categoryId='
+VITE_TO_FIND = 'https://react-diploma-backend.onrender.com/api/items?q='
+VITE_ORDER = 'https://react-diploma-backend.onrender.com/api/order/'
