--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ra_09_router_menu",
+  "name": "REACT_DIPLOMA",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,16 +18,20 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.6",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "moment-timezone": "^0.5.43",
     "react": "^17.0.0 || ^18.0.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
-    "styled-components": "^5.3.11"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.11",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -44,5 +48,5 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
-  "homepage": "https://Summer20100.github.io/ra_09_router_menu/"
+  "homepage": "https://Summer20100.github.io/REACT_DIPLOMA/"
 }
